Human face detection on dog images added.

--- a/DogBreedClassifier/dog_app.ipynb
+++ b/DogBreedClassifier/dog_app.ipynb
@@ -203,9 +203,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percentage of human images with human faces detected is 96.0%\n",
+      "Percentage of dog images with human faces detected is 18.0%\n"
+     ]
+    }
+   ],
    "source": [
     "from tqdm import tqdm\n",
     "\n",
@@ -221,8 +230,16 @@
     "    if face_detector(img) > 0:\n",
     "        detected_face += 1\n",
     "\n",
-    "print(\"Percentage of images with human faces detected is {:.1%}\"\n",
-    "      .format(detected_face/len(human_files_short)))"
+    "print(\"Percentage of human images with human faces detected is {:.1%}\"\n",
+    "      .format(detected_face/len(human_files_short)))\n",
+    "\n",
+    "detected_face = 0\n",
+    "for img in dog_files_short:\n",
+    "    if face_detector(img) > 0:\n",
+    "        detected_face += 1\n",
+    "        \n",
+    "print(\"Percentage of dog images with human faces detected is {:.1%}\"\n",
+    "      .format(detected_face/len(dog_files_short)))"
    ]
   },
   {
