Completed function to detect dogs.

--- a/DogBreedClassifier/dog_app.ipynb
+++ b/DogBreedClassifier/dog_app.ipynb
@@ -198,12 +198,14 @@
    "metadata": {},
    "source": [
     "__Answer:__ \n",
-    "(You can print out your results and/or write your percentages in this cell)"
+    "(You can print out your results and/or write your percentages in this cell)\n",
+    "Percentage of human images with human faces detected is 96.0%\n",
+    "Percentage of dog images with human faces detected is 18.0%"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -251,10 +253,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "### (Optional) \n",
@@ -279,11 +279,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading: \"https://download.pytorch.org/models/vgg16-397923af.pth\" to C:\\Users\\Tarkakagogue/.torch\\models\\vgg16-397923af.pth\n",
+      "100%|███████████████████████████████████████████████████████████████| 553433881/553433881 [02:24<00:00, 3841833.36it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import torchvision.models as models\n",
@@ -319,14 +326,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 52,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from PIL import Image\n",
     "import torchvision.transforms as transforms\n",
+    "from torchvision import datasets\n",
     "\n",
     "def VGG16_predict(img_path):\n",
     "    '''\n",
@@ -344,7 +350,26 @@
     "    ## Load and pre-process an image from the given img_path\n",
     "    ## Return the *index* of the predicted class for that image\n",
     "    \n",
-    "    return None # predicted class index"
+    "    for param in VGG16.features.parameters():\n",
+    "        param.require_grad = False\n",
+    "        \n",
+    "    img_transforms = transforms.Compose([transforms.Resize(255),\n",
+    "                                        transforms.CenterCrop(224),\n",
+    "                                        transforms.ToTensor(),\n",
+    "                                        transforms.Normalize(\n",
+    "                                        mean=[0.485, 0.456, 0.406],\n",
+    "                                        std=[0.229, 0.224, 0.225])])\n",
+    "    \n",
+    "    img = Image.open(img_path)\n",
+    "    img = img_transforms(img).view(-1,3,224,224)\n",
+    "        \n",
+    "    output = VGG16(img)\n",
+    "    \n",
+    "    #class_probability = torch.exp(output)\n",
+    "    \n",
+    "    top_p, top_class = output.topk(1, dim=1)\n",
+    "    \n",
+    "    return top_class[:1,:]"
    ]
   },
   {
@@ -360,17 +385,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 39,
+   "metadata": {},
    "outputs": [],
    "source": [
     "### returns \"True\" if a dog is detected in the image stored at img_path\n",
     "def dog_detector(img_path):\n",
     "    ## TODO: Complete the function.\n",
+    "    class_index = VGG16_predict(img_path)\n",
     "    \n",
-    "    return None # true/false"
+    "    return class_index > 150 and class_index < 269 # true/false"
    ]
   },
   {
@@ -393,14 +417,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percentage of files with dogs detected in the humans files is 0.0%.\n",
+      "Percentage of files with dogs detected in the dogs files is 95.0%.\n"
+     ]
+    }
+   ],
    "source": [
     "### TODO: Test the performance of the dog_detector function\n",
-    "### on the images in human_files_short and dog_files_short.\n"
+    "### on the images in human_files_short and dog_files_short.\n",
+    "dog_count = 0\n",
+    "for img in human_files_short:\n",
+    "    if dog_detector(img):\n",
+    "        dog_count += 1\n",
+    "\n",
+    "print(\"Percentage of files with dogs detected in the humans files is {:.1%}.\"\n",
+    "      .format(dog_count/len(human_files_short)))\n",
+    "\n",
+    "dog_count = 0\n",
+    "for img in dog_files_short:\n",
+    "    if dog_detector(img):\n",
+    "        dog_count += 1\n",
+    "        \n",
+    "print(\"Percentage of files with dogs detected in the dogs files is {:.1%}.\"\n",
+    "      .format(dog_count/len(dog_files_short)))"
    ]
   },
   {
